# real_engine

./: .gitignore  .gitmodules  CMakeLists.txt
game/: CMakeLists.txt  game.cpp
rengine/: CMakeLists.txt
rengine/src/: REngineCore.cpp  REngineCore.h
rengine/src/core/: RCore.cpp  RCore.h
rengine/src/platform/: RWindows.cpp  RWindows.h  Windows.cpp  Windows.h
rengine/src/renderer/: RRenderer.cpp  RRenderer.h
